[package]
name = "tyleri-gpu-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
derive_more = "0.99.17"
yarvk = { path = "../yarvk/yarvk" }
rayon = "1.5.3"
dashmap = {version = "5.4.0",  features = ["rayon"] }